image/SurfaceFilters.h
@@ -157,9 +157,6 @@ protected:
     while (nextOutputRow >= InputSize().height) {
       // Copy any remaining rows from the buffer.
       if (!advancedPass) {
-        DuplicateRows(HaeberliOutputUntilRow(mPass, mProgressiveDisplay,
-                                             InputSize(), mOutputRow),
-                      InputSize().height);
         OutputRows(HaeberliOutputUntilRow(mPass, mProgressiveDisplay,
                                           InputSize(), mOutputRow),
                    InputSize().height);
